// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен нарисовать "актуально", если дней меньше 3 1`] = `
<Button
  className="ButtonActualizeColored ButtonActualizeColored_withBar"
  color="blue"
  size="l"
  type="button"
  width="default"
>
  <div
    className="ButtonActualizeColored__buttonContent"
  >
    <div
      className="ButtonActualizeColored__caption"
    >
      Актуально
    </div>
    <div
      className="ButtonActualizeColored__bar"
      style={
        Object {
          "right": "33.33333333333333%",
        }
      }
    />
  </div>
</Button>
`;

exports[`должен нарисовать "да, продаю", если дней больше 3 1`] = `
<Button
  className="ButtonActualizeColored"
  color="blue"
  size="l"
  type="button"
  width="default"
>
  <div
    className="ButtonActualizeColored__buttonContent"
  >
    <div
      className="ButtonActualizeColored__caption"
    >
      Да, продаю
    </div>
    <div
      className="ButtonActualizeColored__bar"
      style={
        Object {
          "right": "100%",
        }
      }
    />
  </div>
</Button>
`;
